# riemap

./: .gitignore  README.md  setup.sh
backend/: Cargo.toml
backend/src/: config.rs  lib.rs  models.rs  osm.rs  quality.rs  storage.rs
backend/src/api/: handlers.rs  mod.rs
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/region/[...path]/: page.tsx
frontend/src/app/region/[[...path]]/: page.tsx
frontend/src/components/: CompactRegionList.tsx  LoadingSpinner.tsx  QualityReportModal.tsx  RegionCard.tsx  RegionMap.tsx  VersionComparisonModal.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
src/app/region/[...path]/: page.tsx
