[package]
name = "riemap-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "riemap-processor"
path = "src/bin/processor.rs"

[[bin]]
name = "riemap-server"
path = "src/bin/server.rs"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# OSM processing
osmpbf = "0.2"
reqwest = { version = "0.11", features = ["json", "stream"] }
flate2 = "1.0"
zip = "0.6"

# Spatial operations
geo = "0.28"
geojson = "0.24"
proj = "0.27"

# Data storage
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
sled = "0.34"

# Utilities
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures = "0.3"
bytes = "1.0"

# File system
tempfile = "3.0"
walkdir = "2.0"
regex = "1.0"
